--- a/java/pom.xml
+++ b/java/pom.xml
@@ -3,12 +3,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.mydotey.scf.yaml</groupId>
-    <artifactId>parent</artifactId>
-    <version>1.0.2</version>
-    <packaging>pom</packaging>
-    <name>parent</name>
-    <description>scf yaml parent</description>
+    <groupId>org.mydotey.scf</groupId>
+    <artifactId>scf-yaml</artifactId>
+    <version>1.1.0</version>
+    <packaging>jar</packaging>
+    <name>scf-yaml</name>
+    <description>scf yaml configuration source</description>
     <url>https://github.com/mydotey/scf-yaml</url>
 
     <licenses>
@@ -42,7 +42,7 @@
         <java.version>1.8</java.version>
         <source.encoding>UTF-8</source.encoding>
         <slf4j.version>1.7.21</slf4j.version>
-        <scf.version>1.3.0</scf.version>
+        <scf.version>1.4.0</scf.version>
         <yaml.version>1.21</yaml.version>
         <jackson.version>2.9.6</jackson.version>
         <junit.version>4.12</junit.version>
@@ -53,17 +53,8 @@
         <nexus-staging-plugin.version>1.6.7</nexus-staging-plugin.version>
     </properties>
 
-    <modules>
-        <module>scf-yaml</module>
-    </modules>
-
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.mydotey.scf.yaml</groupId>
-                <artifactId>scf-yaml</artifactId>
-                <version>${project.version}</version>
-            </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -108,6 +99,43 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mydotey.scf</groupId>
+            <artifactId>scf-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
