--- a/dotnet/src/MyDotey.SCF.Yaml/MyDotey.SCF.Yaml.csproj
+++ b/dotnet/src/MyDotey.SCF.Yaml/MyDotey.SCF.Yaml.csproj
@@ -2,10 +2,28 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyTitle>MyDotey.SCF.Yaml</AssemblyTitle>
+    <AssemblyName>MyDotey.SCF.Yaml</AssemblyName>
+    <PackageId>MyDotey.SCF.Yaml</PackageId>
+    <Version>1.1.0</Version>
+    <Authors>koqizhao</Authors>
+    <Description>SCF Yaml Configuration Soruce</Description>
+    <Copyright>koqizhao</Copyright>
+
+    <PackageTags>scf;configuration;facade;yaml</PackageTags>
+    <PackageReleaseNotes>SCF Yaml Configuration Soruce</PackageReleaseNotes>
+    <PackageIconUrl>http://numl.net/images/ico.png</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/mydotey/scf-yaml</PackageProjectUrl>
+    <PackageLicenseUrl>https://opensource.org/licenses/Apache-2.0</PackageLicenseUrl>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/mydotey/scf-yaml.git</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MyDotey.SCF" Version="1.4.2" />
+    <PackageReference Include="NLog" Version="4.5.0" />
+    <PackageReference Include="YamlDotNet" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
